# microvm-rs

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  WINDOWS_SUPPORT_STRATEGY.md  info.txt  microvm-rs.md  microvm.entitlements  test_vsock.exp
.github/workflows/: build-kernel.yml
docs/: current_state.md  velocitty-integration.md
examples/: boot_linux.rs  boot_test.rs  hello_vm.rs  minimal.rs
guest/outbound-proxy/: Cargo.toml
guest/outbound-proxy/src/: main.rs
guest/socks-test/: Cargo.toml
guest/socks-test/src/: main.rs
guest/vsock-client/: Cargo.toml
guest/vsock-client/src/: main.rs
guest/wsl-rootfs/: init-microvm.sh  setup.sh
scripts/: build_kernel.sh  create_initramfs.py  download_test_kernel.sh
src/: builder.rs  debug.rs  error.rs  lib.rs  proxy.rs  runner.rs  runtime.rs  vm.rs  vsock.rs
src/backend/: mod.rs
src/backend/hvf/: bindings.rs  memory.rs  mod.rs  vcpu.rs  vm.rs
src/backend/kvm/: mod.rs
src/backend/whp/: bindings.rs  memory.rs  mod.rs  vcpu.rs  vm.rs
src/backend/wsl/: distro.rs  mod.rs  process.rs  rootfs.rs
src/device/: gic.rs  mod.rs  pl011.rs  serial.rs
src/device/virtio/: blk.rs  console.rs  mmio_transport.rs  mod.rs  net.rs  queue.rs  rng.rs  vmnet.rs  vsock.rs
src/loader/: arm64.rs  linux.rs  mod.rs  x86_64.rs
src/memory/: guest.rs  mod.rs
src/proxy/: host.rs  mod.rs  protocol.rs
